# internal/expenses/ports/openapi_api.gen.go
@@ -1,6 +1,6 @@
 // Package ports provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
 package ports
 
 import (
@@ -53,6 +53,13 @@ func (w *ServerInterfaceWrapper) GenerateReport(ctx echo.Context) error {
 	err = runtime.BindQueryParameter("form", true, true, "to", ctx.QueryParams(), &params.To)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter to: %s", err))
+	}
+
+	// ------------- Required query parameter "interval" -------------
+
+	err = runtime.BindQueryParameter("form", true, true, "interval", ctx.QueryParams(), &params.Interval)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter interval: %s", err))
 	}
 
 	// Invoke the callback with all the unmarshalled arguments
