# internal/expenses/ports/openapi_types.gen.go
@@ -1,10 +1,19 @@
 // Package ports provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
 package ports
 
 import (
 	"time"
+)
+
+// Defines values for Interval.
+const (
+	IntervalDay Interval = "day"
+
+	IntervalMonth Interval = "month"
+
+	IntervalYear Interval = "year"
 )
 
 // Category defines model for Category.
@@ -61,6 +70,9 @@ type ExpenseReport struct {
 	Total       Total                `json:"total"`
 }
 
+// Interval defines model for Interval.
+type Interval string
+
 // NewExpense defines model for NewExpense.
 type NewExpense struct {
 	// Category ID of the expense
@@ -101,6 +113,9 @@ type GenerateReportParams struct {
 
 	// to date to filter by
 	To time.Time `json:"to"`
+
+	// results interval
+	Interval Interval `json:"interval"`
 }
 
 // AddExpenseJSONRequestBody defines body for AddExpense for application/json ContentType.
